[package]
name = "token-portfolio-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version= "1.45.1", features = ["full"]}
axum = { version = "0.8.4"}
serde = { version = "1.0.219", features = ["derive"] }
tower = { version = "0.5.2", features = ["full"]}
reqwest = {version = "0.12.20" , features = ["json"]}
